vulnerability fixed, resume link changed from drive to github repo

--- a/new-site/src/app/homepage/about-me/about-me.component.html
+++ b/new-site/src/app/homepage/about-me/about-me.component.html
@@ -8,7 +8,7 @@
 
 			<!-- Profile picture section -->
 			<div class="col-md-4 offset-md-4" id="profile-pic">
-				<img src="../../../assets/profile.JPG" id="profile-img" class="img-responsive profile-circle" alt="Profile image" />
+				<img src="../../../assets/pic.JPG" id="profile-img" class="img-responsive profile-circle" alt="Profile image" />
 			</div>
 			<!-- profile picture section ends here -->
 		</div>
@@ -29,8 +29,8 @@
 				<!-- Bio starts here -->
 				<div class="container">
 					<p>
-						I am currently working as an Associate-Projects at Cognizant, designing and developing solutions for E-commerce
-						problems using <span id="custom">IBM Watson AI</span>.
+						I am currently working as an Associate-Projects at Cognizant, designing and developing solutions for various E-commerce
+						problems. I have developed smart chatbot solutions using <span id="custom">IBM Watson AI</span>.
 						I received my Bachelor's degree in Computer Science and Engineering from <span id="custom">National Institute of
 							Technology Durgapur</span>, where
 						I worked in <span id="custom">Computational Geometry</span> and found a deterministic polynomial time algorithm
@@ -57,7 +57,7 @@
 				<div class="container">
 					<div class="row" id="bio-footer">
 						<div class="col-md-6">
-							<a href="https://drive.google.com/open?id=1OmGFdoQEGAcnE1sjmG5Q90vl9TTcR0Yy" class="btn btn-dark btn-lg" target="_blank"
+							<a href="https://github.com/susantabiswas/resume/raw/master/Double%20page/SusantaBiswas_resume.pdf" class="btn btn-dark btn-lg" target="_blank"
 							 rel="noopener noreferrer">
 								Download Resume
 							</a>
